# before-after

./: .gitignore  app.py  pyproject.toml
data/: correspondencia.json  dados_final.xlsx  dados_inicio.xlsx
docs/: ESTADO.md
scripts/: build_template.py
src/before_after/: __init__.py  comparison.py  context.py  correspondence.py  filenames.py  loaders.py  models.py  normalization.py  pairing.py  rendering.py
templates/: comparativo.xlsx
tests/: test_smoke.py
