[project]
name = "before-after"
version = "0.1.0"
description = "Comparação antes/depois de planilhas com geração de documento via template .xlsx"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.5",
    "streamlit>=1.58.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/before_after"]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]
